dark mode fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,7 +91,7 @@ input {
 }
 
 .eventsList {
-  @apply flex-auto	items-stretch content-evenly;
+  @apply flex-auto items-stretch content-evenly;
 }
 
 .search-input {
@@ -122,7 +122,7 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
-  @apply text-gray-600 m-10 rounded-xl bg-white dark:bg-gray-800 border-2 border-x-indigo-200 dark:border-indigo-800 border-opacity-60 rounded-lg overflow-hidden top-10;
+  @apply text-gray-600 dark:text-zinc-100 m-10 rounded-xl bg-white dark:bg-gray-800 border-2 border-x-indigo-200 dark:border-indigo-800 border-opacity-60 rounded-lg overflow-hidden top-10;
   @keyframes animatetop {
     from {
       top: -300px;
@@ -156,7 +156,7 @@ input {
 }
 
 .modal-p {
-  @apply lg:w-2/3 mx-auto leading-relaxed text-base;
+  @apply lg:w-2/3 mx-auto leading-relaxed text-base dark:text-zinc-100;
 }
 
 .modal-full-row {
@@ -168,21 +168,21 @@ input {
 }
 
 .modal-label {
-  @apply leading-7 text-sm text-gray-600;
+  @apply leading-7 text-sm text-gray-600 dark:text-zinc-200;
 }
 
 .modal-input {
   @apply block w-full px-3
-  py-1.5 text-base font-normal text-gray-700 rounded-lg transition
+  py-1.5 text-base font-normal text-gray-700 dark:text-zinc-300 rounded-lg transition
   ease-in-out focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none;
 }
 
 .modal-save {
-  @apply py-2 flex-auto h-11 text-white bg-indigo-500 border-0 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg;
+  @apply py-2 flex-auto h-11 text-white dark:text-black bg-indigo-500 border-0 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg;
 }
 
 .modal-cancel {
-  @apply py-2 flex-auto h-11 text-white bg-gray-500 border-0 px-8 focus:outline-none hover:bg-red-400 rounded text-lg;
+  @apply py-2 flex-auto h-11 text-white dark:text-black bg-gray-500 border-0 px-8 focus:outline-none hover:bg-red-400 rounded text-lg;
 }
 
 .icon-button:before {
